// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CountDown > test 1`] = `
<DocumentFragment>
  <span
    class="_skeleton_dbbafd"
    style="width: 64px;"
  />
  ,
</DocumentFragment>
`;

exports[`CountDown > test 2`] = `
<DocumentFragment>
  active,
</DocumentFragment>
`;

exports[`CountDown > test 3`] = `
<DocumentFragment>
  active,
</DocumentFragment>
`;

exports[`CountDown > test 4`] = `
<DocumentFragment>
  <span
    class="_countdown_32ab4a"
  >
    in 58:59
  </span>
  ,
</DocumentFragment>
`;

exports[`CountDown > test 5`] = `
<DocumentFragment>
  <strong
    class="_countdown_32ab4a"
  >
    in 00:59
  </strong>
  ,
</DocumentFragment>
`;

exports[`CountDown > test 6`] = `
<DocumentFragment>
  <strong
    class="_countdown_32ab4a"
  >
    in 00:00
  </strong>
  ,
</DocumentFragment>
`;

exports[`CountDown > test 7`] = `
<DocumentFragment>
  active,
</DocumentFragment>
`;

exports[`CountDown > test 8`] = `
<DocumentFragment>
  <span
    class="_countdown_32ab4a"
  >
    in 59:59
  </span>
  ,
</DocumentFragment>
`;

exports[`CountDown > test 9`] = `
<DocumentFragment>
  <span
    class="_countdown_32ab4a"
  >
    in 1:29:59
  </span>
  ,
</DocumentFragment>
`;

exports[`CountDown > test 10`] = `
<DocumentFragment>
  <span
    class="_countdown_32ab4a"
  >
    in 23:29:59
  </span>
  ,
</DocumentFragment>
`;

exports[`CountDown > test 11`] = `
<DocumentFragment>
  <span
    class="_countdown_32ab4a"
  >
    in 1:29:59
  </span>
  ,
</DocumentFragment>
`;

exports[`CountDown > test 12`] = `
<DocumentFragment>
  <span
    class="_countdown_32ab4a"
  >
    in 59:59
  </span>
  ,
</DocumentFragment>
`;

exports[`CountDown > test 13`] = `
<DocumentFragment>
  <span
    class="_countdown_32ab4a"
  >
    in 59:59
  </span>
  ,
</DocumentFragment>
`;
